--- a/_includes/page-footer.html
+++ b/_includes/page-footer.html
@@ -3,11 +3,11 @@
 
   <!-- Footer -->
   <footer
-          class="text-center text-lg-start text-white"
-          style="background-color: #45526e"
+          class="container-fluid text-center text-lg-start text-white"
+          style="background-color: #eeeeee"
           >
     <!-- Grid container -->
-    <div class="container p-4 pb-0">
+    <div class="container-fluid p-4 pb-0">
       <!-- Section: Links -->
       <section class="">
         <!--Grid row-->
