--- a/_includes/page-footer.html
+++ b/_includes/page-footer.html
@@ -3,9 +3,9 @@
 
   <!-- Footer -->
   <footer
-          class="container-fluid text-center text-lg-start text-white"
-          style="background-color: #eeeeee"
-          >
+          class="w-lg ext-center text-lg-start text-white">
+   
+
     <!-- Grid container -->
     <div class="container-fluid p-4 pb-0">
       <!-- Section: Links -->
