--- a/_includes/page-footer.html
+++ b/_includes/page-footer.html
@@ -3,11 +3,11 @@
 
   <!-- Footer -->
   <footer
-          class="w-lg ext-center text-lg-start text-white">
+          class="w-100 ext-center text-lg-start text-white">
    
 
     <!-- Grid container -->
-    <div class="container-fluid p-4 pb-0">
+    <div class="container p-4 pb-0">
       <!-- Section: Links -->
       <section class="">
         <!--Grid row-->
