--- a/_includes/page-footer.html
+++ b/_includes/page-footer.html
@@ -3,7 +3,7 @@
 <footer class="page-footer font-small indigo">
 
   <!-- Footer Links -->
-  <div class="container-lg">
+  <div class="container-fluid">
 
     <!-- Grid row-->
     <div class="row text-center d-flex justify-content-center pt-5 mb-3">
