--- a/_includes/page-footer.html
+++ b/_includes/page-footer.html
@@ -1,6 +1,6 @@
 
 <!-- Footer -->
-<footer class="page-footer font-small indigo">
+<footer class="page-footer font-small indigo bg-#e3d2d2">
 
   <!-- Footer Links -->
   <div class="container-fluid">
